--- a/package.json
+++ b/package.json
@@ -1,61 +1,10 @@
 {
   "name": "vuesual-diff",
   "version": "1.0.2",
-  "main": "./dist/vuesual-diff.common.js",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name vuesual-diff src/main.js && rm dist/demo.html",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.0",
-    "@vue/cli-plugin-eslint": "^4.3.0",
-    "@vue/cli-plugin-unit-jest": "^4.3.0",
-    "@vue/cli-service": "^4.3.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "1.0.0-beta.31",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/standard"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {},
-    "overrides": [
-      {
-        "files": [
-          "**/__tests__/*.{j,t}s?(x)",
-          "**/tests/unit/**/*.spec.{j,t}s?(x)"
-        ],
-        "env": {
-          "jest": true
-        }
-      }
-    ]
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "jest": {
-    "preset": "@vue/cli-plugin-unit-jest"
-  },
+  "main": "dist/vuesual-diff.common.js",
+  "module": "dist/vuesual-diff.esm.js",
+  "unpkg": "dist/vuesual-diff.js",
+  "jsdelivr": "dist/vuesual-diff.js",
   "files": [
     "dist/*",
     "docs/*",
@@ -65,5 +14,56 @@
     "*.lock",
     "LICENSE",
     "*.md"
-  ]
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PaleoCrafter/vuesual-diff.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PaleoCrafter/vuesual-diff/issues"
+  },
+  "homepage": "https://github.com/PaleoCrafter/vuesual-diff#readme",
+  "keywords": [
+    "vue",
+    "vue-component",
+    "vue-library",
+    "diffs"
+  ],
+  "scripts": {
+    "build": "yarn run build:cjs && yarn run build:es && yarn run build:umd:dev && yarn run build:umd:prod",
+    "build:cjs": "rollup -c --environment TARGET:cjs",
+    "build:es": "rollup -c --environment TARGET:esm",
+    "build:umd:dev": "rollup -c --environment TARGET:umd-dev",
+    "build:umd:prod": "rollup -c --environment TARGET:umd-prod",
+    "lint": "eslint --ext .js,.vue .",
+    "lint:fix": "eslint --ext .js,.vue . --fix"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@vue/babel-preset-app": "^4.3.1",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^6.7.2",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "lodash": "^4.17.15",
+    "rollup": "^2.7.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-filesize": "^7.0.0",
+    "rollup-plugin-license": "^2.0.0",
+    "rollup-plugin-uglify": "^6.0.4",
+    "uglify-es": "^3.3.9",
+    "vue": "^2.6.11"
+  }
 }
